@@ -5,6 +5,7 @@ shadow-4.1.2.1 -> shadow-4.1.3						UNRELEASED
 *** general:
 - packaging
   * Added support for OpenPAM.
+  * Added support for uclibc.
 
 - gpasswd
   * Added support for long options --add (-a), --delete (-d),
